tests/02-no_value.stderr
error: a discriminant must be defined
 --> tests/02-no_value:7:5
  |
7 |     Flag2,
  |     ^^^^^
